# cpg-platform

./: README.md  docker-compose.yml  fix_files.sh
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  conversation.py  data_quality.py  forecasting.py  health.py  ingestion.py  insights.py  reference.py  reports.py  retraining.py
backend/app/core/: config.py  database.py  logging.py  mixins.py  telemetry.py
backend/app/forecasting/evaluation/: metrics.py
backend/app/forecasting/features/: engineer.py
backend/app/forecasting/models/: base.py  lightgbm_model.py  prophet_model.py
backend/app/forecasting/pipeline/: predictor.py
backend/app/forecasting/training/: trainer.py
backend/app/ingestion/: deduplication.py  late_arrivals.py  normalization.py  schema_drift.py
backend/app/ingestion/connectors/: source_connectors.py
backend/app/ingestion/parsers/: csv_parser.py
backend/app/insights/cache/: insight_cache.py
backend/app/insights/context/: builders.py
backend/app/insights/conversation/: engine.py
backend/app/insights/engines/: insight_engines.py
backend/app/insights/llm/: client.py
backend/app/insights/prompts/: templates.py
backend/app/models/: __init__.py  data_quality.py  dimensions.py  forecasting.py  insights.py  security.py  signals.py  transactions.py
backend/app/pipeline/: orchestrator.py
backend/app/scheduler/: retraining.py
backend/app/schemas/: analytics.py  auth.py  base.py  forecasting.py  ingestion.py  insights.py  reference.py
backend/app/security/: audit.py  deps.py  rbac.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_api_flows.py  test_forecasting_api.py  test_insights_api.py  test_retraining_scheduler.py  test_security.py
backend/app/tests/unit/: test_forecasting.py  test_insights.py  test_pipeline_stages.py  test_rbac.py  test_validation_rules.py
backend/app/validation/: engine.py  rules.py
backend/db/: schema.sql  schema_security.sql
backend/db/init/: 00_init.sql  02_schema_forecasting.sql  03_schema_insights.sql
backend/db/migrations/: env.py  script.py.mako
backend/db/migrations/versions/: 0001_initial.py
backend/docker/: Dockerfile.api  wait-for-postgres.sh
backend/scripts/: generate_synthetic_data.py  seed_admin.py
docs/: cicd-plan.md  handoff-risks.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json
(+42 files in other folders)
