[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-platform"
version = "2.0.0"
description = "CPG Predictive Intelligence Platform — Phase 1 + 2"
requires-python = ">=3.11"

dependencies = [
    # Required by opentelemetry instrumentation (pkg_resources)
    "setuptools>=68",
    # API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",

    # Database
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",

    # Data processing
    "pandas==2.2.3",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "scipy==1.14.1",

    # Forecasting — Phase 2
    "prophet==1.1.6",
    "cmdstanpy>=1.2.0",
    "lightgbm==4.5.0",
    "scikit-learn==1.5.2",
    "statsmodels==0.14.4",
    "joblib==1.4.2",
    "optuna==3.6.1",

    # Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",

    # Utilities
    "httpx==0.27.2",
    "python-dateutil==2.9.0",
    "pytz==2024.2",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "reportlab==4.2.5",

    # Security -- Phase 5
    "bcrypt==4.2.0",
    "python-jose[cryptography]==3.3.0",

    # Observability -- Phase 5
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-httpx==0.48b0",
    "prometheus-fastapi-instrumentator==7.0.0",

    # Automated retraining scheduler -- Phase 5
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.27.2",
    "factory-boy==3.3.1",
    "faker==30.3.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/db/migrations/*"]
